--- a/recipes/gajar_ka_halwa.html
+++ b/recipes/gajar_ka_halwa.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1><strong>Gajar ka Halwa</strong></h1>
-    <img src="C:\Coding\Tsec\odin-recipes\pictures\Gajar-Ka-Halwa-2-1.jpg" alt="GajarkaHalwaImage" width="400" height="400"/>
+    <img src="pictures/Gajar-Ka-Halwa-2-1.jpg" alt="GajarkaHalwaImage" width="400" height="400"/>
 
     <h2> <strong>Description</strong></h2>
     <p>Carrot halwa, or gajar ka halwa, is a traditional Indian dessert that's deliciously rich and creamy. </p>
