--- a/recipes/easy_egg_noodles.html
+++ b/recipes/easy_egg_noodles.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1> <strong> Egg Noodles </strong></h1>
-<img src="C:\Coding\Tsec\odin-recipes\pictures\easy egg noodles.webp "  alt="Egg Noodles Image" width="300" height="300"/> 
+<img src="https://st2.depositphotos.com/1373322/7107/i/380/depositphotos_71072253-stock-photo-chow-mein-fried-noodles-with.jpg"  alt="Egg Noodles Image" width="300" height="300"/> 
  
 <h2> <strong>Description</strong></h2>
 <p> These egg noodles are the old-fashioned type, just like Grammy used to make!</p>
